sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:8: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
      if (getValeur(ecart) = 9 || getValeur(ecart) = 10){
          ^AlgCombSort11:8: error: value || is not a member of Int
      if (getValeur(ecart) = 9 || getValeur(ecart) = 10){
                               ^AlgCombSort11:9: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
      	getValeur(ecart) = 11  
        ^